--- a/app/src/main/res/layout/fragment_mars_facts.xml
+++ b/app/src/main/res/layout/fragment_mars_facts.xml
@@ -8,6 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="top"
+        android:layout_margin="@dimen/mars_fact_layout_margin"
         android:background="@color/blackBackground"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         tools:context=".ui.explore_detail.mars_facts.MarsFactsFragment">
@@ -26,9 +27,9 @@
             android:id="@+id/reload_fact"
             android:src="@drawable/ic_refresh"
             android:layout_width="wrap_content"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginEnd="20dp"
-            android:foregroundGravity="center_horizontal"
+
             app:layout_constraintEnd_toEndOf="@id/fact_name_text"
             app:layout_constraintTop_toTopOf="@id/fact_name_text"
             app:layout_constraintBottom_toBottomOf="@id/fact_name_text"
@@ -39,8 +40,7 @@
             app:cardCornerRadius="@dimen/default_cardview_corner_radius"
             android:layout_height="0dp"
             android:elevation="@dimen/default_cardview_elevation"
-            android:layout_margin="10dp"
-
+            android:layout_margin="@dimen/mars_fact_layout_margin"
             app:layout_constraintTop_toBottomOf="@id/fact_name_text"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -53,7 +53,6 @@
 
                 style="@style/MarsFactsText"
                 tools:text="This is a fact!"
-                android:padding="6dp"
                 android:id="@+id/fact_description_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
