--- a/app/src/main/res/layout/fragment_mars_weather.xml
+++ b/app/src/main/res/layout/fragment_mars_weather.xml
@@ -18,7 +18,10 @@
             android:id="@+id/weather_title_cardview"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_margin="26dp"
+            android:layout_marginTop="@dimen/mars_weather_title_card_margin_top_bottom"
+            android:layout_marginBottom="@dimen/mars_weather_title_card_margin_top_bottom"
+            android:layout_marginStart="@dimen/mars_weather_title_card_margin_start_end"
+            android:layout_marginEnd="@dimen/mars_weather_title_card_margin_start_end"
             app:cardCornerRadius="@dimen/default_cardview_corner_radius"
             android:elevation="@dimen/default_cardview_elevation"
             app:layout_constraintTop_toTopOf="parent"
@@ -46,10 +49,7 @@
                         android:text="@string/weather_on_mars"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_margin="10dp"
-                        android:gravity="center_horizontal"
-                        style="@style/TextAppearance.AppCompat.Title"
-                        android:textSize="24sp"
+                        style="@style/MarsWeatherText.Title"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -59,12 +59,8 @@
                         android:id="@+id/sol_and_date_text"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_margin="4dp"
                         tools:text="Sol 2121 - 2018-03-21"
-                        android:gravity="center_horizontal"
-                        android:textSize="16sp"
-                        style="@style/Base.TextAppearance.AppCompat.Display1"
-                        android:textStyle="bold"
+                        style="@style/MarsWeatherText.SubTitle"
                         app:layout_constraintTop_toBottomOf="@id/mars_weather_title_text"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -87,8 +83,8 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginTop="16dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginStart="@dimen/mars_weather_detail_card_margin_start_end"
+            android:layout_marginEnd="@dimen/mars_weather_detail_card_margin_start_end"
             app:layout_constraintTop_toBottomOf="@id/weather_title_cardview"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
