--- a/app/src/main/res/layout/fragment_info_dialog.xml
+++ b/app/src/main/res/layout/fragment_info_dialog.xml
@@ -10,26 +10,28 @@
 
 
     <ImageView
+        android:contentDescription="@string/info_icon_cd"
         android:id="@+id/dialog_info_imageview"
         android:layout_marginTop="10dp"
         android:src="@drawable/ic_information_white"
         android:layout_width="match_parent"
-        android:layout_height="24dp" />
+        android:layout_height="@dimen/information_icon_height" />
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="6dp"
         app:cardBackgroundColor="@color/marsOrange"
-        app:cardCornerRadius="10dp"
+        app:cardCornerRadius="@dimen/default_cardview_corner_radius"
         android:elevation="1dp">
 
         <TextView
             android:padding="16dp"
+            style="@style/InformationText"
             android:id="@+id/information_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/lightText"
+
              />
 
     </android.support.v7.widget.CardView>
