--- a/app/src/main/res/layout/fragment_rover_science.xml
+++ b/app/src/main/res/layout/fragment_rover_science.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
@@ -8,7 +7,6 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.explore_detail.rover_science.RoverScienceFragment">
-
 
 
     <android.support.design.widget.TabLayout
@@ -22,10 +20,11 @@
         app:tabRippleColor="@color/blackBackground"
         app:tabSelectedTextColor="@color/lightText"
         app:layout_constraintTop_toTopOf="parent"
-        app:tabMode="scrollable"
-    />
+        app:tabMode="scrollable" />
 
     <android.support.v4.view.ViewPager
+        android:layout_marginStart="@dimen/rover_science_outside_margin"
+        android:layout_marginEnd="@dimen/rover_science_outside_margin"
         android:id="@+id/rover_science_viewpager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
