--- a/app/src/main/res/layout/main_list_item.xml
+++ b/app/src/main/res/layout/main_list_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView
+    android:id="@+id/main_item_card"
     android:layout_width="@dimen/main_cardview_width"
     android:layout_height="@dimen/main_cardview_height"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -12,25 +13,42 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-
-    <ImageView
-        android:contentDescription="@string/explore_option_cd"
-        android:id="@+id/main_cardview_image"
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:src="@drawable/explore_main"
-        android:scaleType="centerCrop"
-        android:background="@android:color/black"/>
-
-
-    <TextView
-        android:id="@+id/main_cardview_text"
-        style="@style/MainCardViewText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal|bottom"
-        tools:text="Explore Mars"/>
+        android:layout_height="match_parent">
 
 
 
-</android.support.v7.widget.CardView>
+        <ImageView
+            android:contentDescription="@string/explore_option_cd"
+            android:id="@+id/main_cardview_image"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerInside"
+            app:layout_constraintTop_toBottomOf="@id/main_cardview_text"
+            android:background="@android:color/black"
+           />
+
+        <View
+            android:background="@drawable/scrim"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintTop_toTopOf="parent"
+            />
+        <TextView
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:id="@+id/main_cardview_text"
+            style="@style/MainCardViewText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            tools:text="Explore Mars"/>
+
+
+</android.support.constraint.ConstraintLayout>
+
+
+
+    </android.support.v7.widget.CardView>
