--- a/app/src/main/res/layout/mars_explore_list_item.xml
+++ b/app/src/main/res/layout/mars_explore_list_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView
     android:layout_width="match_parent"
-    android:layout_height="200dp"
+    android:layout_height="@dimen/mars_explore_cardview_height"
     style="@style/CardView.Light"
     android:elevation="@dimen/default_cardview_elevation"
     app:cardCornerRadius="@dimen/default_cardview_corner_radius"
@@ -21,7 +21,7 @@
 
         <TextView
             android:id="@+id/mars_explore_cardview_text"
-            style="@style/RoverExploreCardViewText"
+            style="@style/MarsExploreCardViewText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:text="Weather On Mars"
