--- a/app/src/main/res/layout/rover_explore_list_item.xml
+++ b/app/src/main/res/layout/rover_explore_list_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<android.support.v7.widget.CardView
+    android:layout_width="match_parent"
+    android:layout_height="@dimen/rover_explore_cardview_height"
     style="@style/CardView.Light"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:elevation="@dimen/default_cardview_elevation"
@@ -28,7 +29,7 @@
             android:background="@color/blackBackground"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/rover_explore_cardview_text"
             app:layout_constraintBottom_toBottomOf="parent"
             />
 
@@ -60,52 +61,48 @@
             android:id="@+id/sol_search_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="View Photos From Sol #"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
-            android:textColor="@color/lightText"
-            android:textSize="18sp"
+            style="@style/RoverExploreSolSearchText"
+            android:text="@string/view_photos_from_sol"
             app:layout_constraintTop_toTopOf="@id/guideline_75_horizonal"
             app:layout_constraintLeft_toLeftOf="parent"
             />
         
         <EditText
+            android:hint="@string/enter_sol_hint"
             android:id="@+id/sol_edit_text"
-            android:layout_width="60dp"
+            android:layout_width="@dimen/rover_explore_sol_edittext_width"
             android:layout_height="0dp"
             android:inputType="number"
+            android:imeOptions="actionDone"
             android:background="@color/lightText"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
+            android:layout_marginStart="@dimen/rover_explore_sol_edit_text_margin"
+            android:layout_marginEnd="@dimen/rover_explore_sol_edit_text_margin"
             app:layout_constraintTop_toTopOf="@id/sol_search_label"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="@id/sol_search_label"/>
         
         <Button
             android:id="@+id/search_sol_button"
-            style="@style/Base.Widget.AppCompat.Button.Borderless"
-            android:textColor="@color/lightText"
+            style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:layout_margin="10dp"
-            android:padding="10dp"
+            android:layout_height="@dimen/rover_explore_sol_search_button_height"
+            android:layout_margin="@dimen/rover_explore_sol_search_button_padding"
+            android:padding="@dimen/rover_explore_sol_search_button_padding"
             app:layout_constraintTop_toBottomOf="@id/sol_search_label"
-            app:layout_constraintEnd_toStartOf="@id/guideline_50_vertical"
-
-            android:text="Search Sol"/>
+            app:layout_constraintStart_toEndOf="@id/guideline_50_vertical"
+            android:text="@string/search_sol_button"/>
 
         <Button
             android:id="@+id/random_sol_button"
-            style="@style/Base.Widget.AppCompat.Button.Borderless"
+            style="@style/Widget.AppCompat.Button.Colored"
             android:textColor="@color/lightText"
             android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:layout_margin="10dp"
-            android:padding="10dp"
+            android:layout_height="@dimen/rover_explore_sol_search_button_height"
+            android:layout_margin="@dimen/rover_explore_sol_search_button_padding"
+            android:padding="@dimen/rover_explore_sol_search_button_padding"
             app:layout_constraintTop_toBottomOf="@id/sol_search_label"
-            app:layout_constraintStart_toStartOf="@id/guideline_50_vertical"
-
-            android:text="Random Sol"/>
+            app:layout_constraintEnd_toStartOf="@id/guideline_50_vertical"
+            android:text="@string/random_sol_button"/>
 
 </android.support.constraint.ConstraintLayout>
 
