--- a/app/src/main/res/menu/menu_delete_favorites.xml
+++ b/app/src/main/res/menu/menu_delete_favorites.xml
@@ -8,7 +8,8 @@
         android:id="@+id/action_delete_all_favorites"
         android:icon="@drawable/ic_delete_all"
         android:title="@string/delete_all_favorites_menu"
-        app:showAsAction="ifRoom"
+        app:showAsAction="collapseActionView"
+        android:orderInCategory="1"
         />
 
 
