--- a/app/src/main/res/menu/menu_favorite_image.xml
+++ b/app/src/main/res/menu/menu_favorite_image.xml
@@ -7,6 +7,7 @@
         android:icon="@drawable/ic_save_favorite"
         android:title="@string/add_to_favorites_menu"
         app:showAsAction="ifRoom"
+        android:orderInCategory="1"
         />
 
 
