--- a/app/src/main/res/menu/menu_settings.xml
+++ b/app/src/main/res/menu/menu_settings.xml
@@ -6,7 +6,16 @@
         android:id="@+id/action_settings"
         android:title="@string/settings_action"
         android:icon="@drawable/ic_settings"
-        app:showAsAction="ifRoom"
+        app:showAsAction="never"
+        android:orderInCategory="2"
         />
+
+    <item
+        android:id="@+id/action_credits"
+        android:title="@string/credits"
+        android:icon="@drawable/ic_information_white"
+        app:showAsAction="never"
+        android:orderInCategory="3"/>
+
 
 </menu>
