--- a/app/src/main/res/values-sw600dp-land/dimens.xml
+++ b/app/src/main/res/values-sw600dp-land/dimens.xml
@@ -10,8 +10,24 @@
     <dimen name="main_card_top_bottom_margin">20dp</dimen>
     <dimen name="main_cardview_width">400dp</dimen>
 
+    <!-- Explore Master -->
     <!-- Rover Explore -->
     <dimen name="rover_explore_card_title_text_size">24dp</dimen>
+    <dimen name="mission_manifest_text_size">14dp</dimen>
+    <dimen name="manifest_label_padding_end">6dp</dimen>
+    <dimen name="rover_explore_cardview_height">-1px</dimen>
+    <dimen name="rover_explore_cardview_width">-1px</dimen>
+    <dimen name="rover_explore_cardview_margin_top_bottom">40dp</dimen>
+    <dimen name="rover_explore_cardview_margin_start_end">20dp</dimen>
+    <dimen name="rover_explore_card_sol_search_text_size">16sp</dimen>
+    <dimen name="rover_explore_sol_search_button_height">48dp</dimen>
+    <dimen name="rover_explore_sol_search_button_padding">12dp</dimen>
+    <dimen name="rover_explore_sol_edit_text_margin">20dp</dimen>
+    <dimen name="rover_explore_sol_edittext_width">80dp</dimen>
+
+
+    <!-- MArs Fact -->
+    <dimen name="mars_fact_layout_margin">40dp</dimen>
 
     <!-- Rover Science  -->
     <dimen name="rover_science_top_margin">10dp</dimen>
